# neural-tokenizer

./: README.md  pyproject.toml  setup.py  testing.py  train.py
configs/: demo_run.py
neural_tokenizer/: __init__.py  config.py  fsq.py  model.py  trainer.py
