[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-tokenizer"
authors = [
    {name = "Elio Pascarelli", email = "elio@pascarelli.com"},
]
description = "VQAEs for Text"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "transformers",
    "torch",
    "rearrange",
    "python-dotenv",
    "flash_attn",
]

[project.optional-dependencies]
train = ["accelerate", "wandb"]

dynamic = ["version"]

[project.scripts]
my-script = "my_package.module:function"
